--- a/package.json
+++ b/package.json
@@ -9,22 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
     "@mui/x-date-pickers": "^5.0.17",
     "@next/font": "^13.1.6",
+    "@react-google-maps/api": "^2.18.1",
     "@supabase/supabase-js": "^2.7.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.2",
     "dayjs": "^1.11.7",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "google-map-react": "^2.2.0",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/google-map-react": "^2.1.7"
   }
 }
