--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/autosuggest-highlight": "^3.2.0"
   }
 }
