--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install",
-    "precommit": "lint-staged"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
