--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/autosuggest-highlight": "^3.2.0"
+    "@types/autosuggest-highlight": "^3.2.0",
+    "eslint-config-prettier": "^8.6.0",
+    "prettier": "^2.8.4"
   }
 }
