--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "parse": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-imask": "^6.4.3",
     "typescript": "4.9.4"
   },
   "devDependencies": {
