--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.6",
     "@mui/x-date-pickers": "^5.0.17",
     "@next/font": "^13.1.6",
-    "@supabase/auth-helpers-nextjs": "^0.5.4",
+    "@supabase/auth-helpers-nextjs": "^0.5.6",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.7.0",
     "@types/node": "18.11.18",
@@ -29,6 +29,8 @@
     "parse": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll-up": "^1.4.0",
+    "react-imask": "^6.4.3",
     "typescript": "4.9.4"
   },
   "devDependencies": {
