--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "eslint-config-prettier": "^8.6.0",
     "jest": "^29.5.0",
     "prettier": "^2.8.4",
-    "ts-node": "^10.9.1",
-    "whatwg-fetch": "^3.6.2"
+    "ts-node": "^10.9.1"
   }
 }
