--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# robot framework
+log.html
+output.html
+output.xml
+report.html
+selenium-screenshot*.png
