--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -29,13 +30,22 @@
     "parse": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-scroll-up": "^1.4.0",
     "react-imask": "^6.4.3",
+    "react-scroll-up": "^1.4.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
+    "@jest/globals": "^29.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/autosuggest-highlight": "^3.2.0",
+    "babel-jest": "^29.5.0",
     "eslint-config-prettier": "^8.6.0",
-    "prettier": "^2.8.4"
+    "jest": "^29.5.0",
+    "prettier": "^2.8.4",
+    "ts-node": "^10.9.1"
   }
 }
